-
Bug
-
Resolution: Done
-
P0: Blocker
-
None
-
5.4.0 Beta
-
None
-
Windows 7 x64
QtCreator 3.2.1
I build qt5 from source, I got the source from gitorious 5.4 branch, today I found every my QtQuick application will crash at startup, the call stack is:
0 QMetaObject::static_metacall qmetaobject.cpp 280 0x59c1d235 1 QMetaMethod::fromSignalImpl qmetaobject.cpp 2014 0x59c21ed6 2 QMetaMethod::fromSignal<void (__cdecl QQuickAccessibleAttached::*)(void) __ptr64> qmetaobject.h 146 0x7feeb858aa5 3 `dynamic initializer for 'QQuickAccessibleAttached::sigPress'' qquickaccessibleattached.cpp 295 0x7feeb964917 4 initterm MSVCR100D 0x5c12525c 5 _CRT_INIT crtdll.c 289 0x7feeb95e0d0 6 __DllMainCRTStartup crtdll.c 506 0x7feeb95e45b 7 _DllMainCRTStartup crtdll.c 477 0x7feeb95e3c1 8 TpAllocTimer ntdll 0x771ab108 9 LdrQueryImageFileKeyOption ntdll 0x771b1e5a 10 RtlCreateTagHeap ntdll 0x771b1937 11 LdrInitializeThunk ntdll 0x7719c34e
It crash at Q_ASSERT(priv(d.data)->revision >= 6);
- is required for
-
QTBUG-41613 Issues to be fixed before 5.4.0 RC
-
- Closed
-
- replaces
-
QTBUG-42258 [REG 5.3.2 -> 5.4] Application crashes in QMetaObject::static_metacall on startup
-
- Closed
-
| For Gerrit Dashboard: QTBUG-42227 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 98222,2 | Do not crash QML apps on startup | 5.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |